tests/ui/ergonomic-clones/closure/local-type.stderr
error[E0573]: expected type, found local variable `x`
  --> $DIR/local-type.rs:7:21
   |
LL |     let _ = use |x: x| x;
   |                     ^ not a type

error[E0573]: expected type, found local variable `x`
  --> $DIR/local-type.rs:8:30
   |
LL |     let _ = use |x: bool| -> x { x };
   |                              ^ not a type

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0573`.
